Commit everything that's been sitting for a few months

--- a/src/main/resources/assets/soulshards/lang/en_US.lang
+++ b/src/main/resources/assets/soulshards/lang/en_US.lang
@@ -13,3 +13,6 @@ tooltip.soulshards.shard.tier=Tier: %s
 tooltip.soulshards.shard.kill=Kills: %s
 tooltip.soulshards.shard.entity=Bound to: %s
 tooltip.soulshards.shard.unbound=Unbound
+
+# Gui
+gui.soulshards.forge.name=Soul Forge
